# cdt_challenge_2021

./: .gitignore  README.md
cdt_msgs/: CMakeLists.txt  package.xml
cdt_msgs/msg/: Frontiers.msg  Graph.msg  GraphNode.msg  Object.msg  ObjectList.msg  RobotState.msg
cdt_msgs/srv/: ToggleExploration.srv
cdt_rqt/: CMakeLists.txt  README.md  package.xml  plugin.xml  setup.py
cdt_rqt/resource/: CdtGui.ui  resources.qrc
cdt_rqt/scripts/: cdt_rqt
cdt_rqt/src/cdt_rqt/: cdt_gui.py  resources.py
cdt_superbuild/: CMakeLists.txt  package.xml
cdt_superbuild/build_scripts/: install.sh  setup-1-build-environment.sh  setup-2-install-ros.sh  setup-3-cdt-packages.sh  setup-4-update-submodules.sh  setup-5-init-workspace.sh  setup-6-build.sh  setup-7-edit-bashrc.sh
cdt_visualizations/: CMakeLists.txt  package.xml  setup.py
cdt_visualizations/include/cdt_visualizations/: explored_space_vis.h
cdt_visualizations/launch/: visualizations.launch
cdt_visualizations/python/: publish_team_names.py  publish_visualizations.py
cdt_visualizations/src/: explored_space_node.cpp
cdt_visualizations/src/cdt_visualizations/: explored_space_vis.cpp
elevation_map_filter_cdt/: CMakeLists.txt  package.xml
elevation_map_filter_cdt/config/: filter_chain.yaml
elevation_map_filter_cdt/include/elevation_map_filter_cdt/: elevation_map_filter.h
elevation_map_filter_cdt/launch/: filter_chain.launch
elevation_map_filter_cdt/src/: elevation_map_filter_node.cpp
elevation_map_filter_cdt/src/elevation_map_filter_cdt/: elevation_map_filter.cpp
gazebo_worlds_cdt/: CMakeLists.txt  README.md  package.xml
gazebo_worlds_cdt/config/: arena.yaml  arena_simple.yaml
gazebo_worlds_cdt/models/arena/: model.config  model.sdf
gazebo_worlds_cdt/models/arena_flat/: model.config  model.sdf
gazebo_worlds_cdt/models/arena_flat/meshes/: arena_flat.dae
gazebo_worlds_cdt/models/arena_simple/: model.config  model.sdf
gazebo_worlds_cdt/models/arena_simple/meshes/: arena_simple.dae
gazebo_worlds_cdt/models/barrel/: model.config  model.sdf
gazebo_worlds_cdt/models/barrel/meshes/: barrel.dae
gazebo_worlds_cdt/models/barrow/: model.config  model.sdf
gazebo_worlds_cdt/models/barrow/meshes/: barrow.dae
gazebo_worlds_cdt/models/computer/: model.config  model.sdf
gazebo_worlds_cdt/models/computer/meshes/: computer.dae
gazebo_worlds_cdt/models/dog/: model.config  model.sdf
gazebo_worlds_cdt/models/multi_room/: model.config  model.sdf
gazebo_worlds_cdt/models/multi_room_floor/: model.config  model.sdf
gazebo_worlds_cdt/models/multi_room_ramp/: model.config  model.sdf
gazebo_worlds_cdt/models/multi_room_ramp/meshes/: floor.dae  wall_box.dae
gazebo_worlds_cdt/worlds/: arena.world  arena_flat.world  arena_simple.world  multi_floor.world  race.world  single_floor.world
jackal_description_cdt/: CMakeLists.txt  package.xml
jackal_description_cdt/cmake/: jackal_descriptionConfig.cmake
jackal_description_cdt/launch/: description.launch
jackal_description_cdt/urdf/: accessories.urdf.xacro  jackal.urdf.xacro  rooster.xacro
jackal_description_cdt/urdf/accessories/: bridge_plate.urdf.xacro  camera_mount.urdf.xacro  hokuyo_ust10.urdf.xacro  novatel_smart6.urdf.xacro  sick_lms1xx_mount.urdf.xacro  stereo_camera_mount.urdf.xacro
jackal_description_cdt/urdf/camera/: base_camera.xacro
jackal_description_cdt/urdf/lidar/: base_lidar.xacro
jackal_runtime_cdt/: CMakeLists.txt  package.xml
jackal_runtime_cdt/config/elevation_mapping/: ouster_jackal_sim.yaml
jackal_runtime_cdt/config/rqt/: cdt_challenge.perspective
jackal_runtime_cdt/config/rviz/: competition.rviz  jackal.rviz  world.yaml
jackal_runtime_cdt/launch/: basic_stack.launch  box_filtering_sim.launch  elevation_mapping_ouster_jackal_sim.launch  elevation_mapping_sim.launch  gazebo_arena.launch  gazebo_arena_flat.launch  gazebo_arena_simple.launch  gazebo_empty_world.launch  gazebo_multi_floor.launch  gazebo_single_floor.launch  launch_all.launch  stack.launch  tf_bridge_odom_map.launch  view_competition.launch  view_jackal.launch
jackal_runtime_cdt/python/: jackal_to_robot_state.py  perfect_jackal_to_robot_state.py
jackal_runtime_cdt/scripts/: jackal_to_robot_state.py  publish_odom.py
jackal_runtime_cdt/src/: nav_bridge.cpp
object_detector_cdt/: CMakeLists.txt  package.xml
object_detector_cdt/include/object_detector_cdt/: object_detector.h
object_detector_cdt/launch/: object_detector.launch
object_detector_cdt/src/: object_detector_node.cpp
object_detector_cdt/src/object_detector_cdt/: object_detector.cpp
position_controller_cdt/: CMakeLists.txt  package.xml
position_controller_cdt/include/position_controller_cdt/: position_controller.h
position_controller_cdt/launch/: position_controller.launch
position_controller_cdt/src/: position_controller_node.cpp
position_controller_cdt/src/position_controller_cdt/: position_controller.cpp
world_explorer_cdt/: CMakeLists.txt  package.xml
world_explorer_cdt/include/world_explorer_cdt/: graph_planner.h  local_planner.h  world_explorer.h
world_explorer_cdt/launch/: world_explorer.launch
world_explorer_cdt/src/: world_explorer_node.cpp
world_explorer_cdt/src/world_explorer_cdt/: graph_planner.cpp  local_planner.cpp  world_explorer.cpp
world_modelling_cdt/: CMakeLists.txt  package.xml
world_modelling_cdt/include/world_modelling_cdt/: world_modelling.h
world_modelling_cdt/launch/: world_modelling.launch
world_modelling_cdt/src/: world_modelling_node.cpp
world_modelling_cdt/src/world_modelling_cdt/: world_modelling.cpp
