<?xml version="1.0"?>
<package format="2">
  <name>cdt_rqt</name>
  <version>0.0.1</version>
  <description>A RQT GUI for the CDT Challenge</description>
  <maintainer email="matias@robots.ox.ac.uk">Matias Mattamala</maintainer>

  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>cdt_msgs</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_py</depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
