<?xml version="1.0"?>
<package format="2">
  <name>cdt_visualizations</name>
  <version>0.0.0</version>
  <description>Visualization tools for the CDT challenge</description>

  <maintainer email="matias@robots.ox.ac.uk">Matias Mattamala</maintainer>
  <author email="matias@robots.ox.ac.uk">Matias Mattamala</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>eigen_conversions</depend>
  <depend>tf_conversions</depend>
  <depend>cdt_msgs</depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf</depend>
  <depend>grid_map_ros</depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_cv</depend>
  <depend>grid_map_msgs</depend>
  <export>
  </export>
</package>
