<?xml version="1.0"?>
<package>
  <name>gazebo_worlds_cdt</name>
  <version>0.0.0</version>
  <description>The gazebo_worlds_cdt package, based on gazebo_worlds_drs</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="matias@robots.ox.ac.uk">Matias Mattamala</maintainer>
  <author email="matias@robots.ox.ac.uk">Matias Mattamala</author>
  <author email="mfallon@robots.ox.ac.uk">Maurice Fallon</author>
  <author email="omelon@robots.ox.ac.uk">Oliwier Melon</author>


  <!-- License -->
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
