<?xml version="1.0"?>
<package format="2">
  <name>jackal_runtime_cdt</name>
  <version>0.0.0</version>
  <description>The jackal_runtime_cdt package</description>

  <maintainer email="mfallon@todo.todo">mfallon</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>eigen_conversions</depend>
  <depend>tf_conversions</depend>
<!--  <depend>pronto_slam</depend>
  <depend>vilens</depend>
-->
  <export>
  </export>
</package>
